Process Hacker

2.28
 * NEW/IMPROVED:
   * peview now resolves .lnk targets
   * Updated ExtendedTools plugin:
     * Fixed network graph scaling
   * Updated ToolStatus plugin:
     * Added Searchbox
 * FIXED:

2.27
 * NEW/IMPROVED:
   * Updated OnlineChecks plugin:
     * 2012-01-16: Updated VirusTotal uploader and added hash checking
 * FIXED:
   * Fixed Description column sorting bug
   * Fixed notification icon bug

2.26
 * NEW/IMPROVED:
   * Added option to show Commit Charge in system information
     summary view
   * Added -priority and -selectpid command line options
   * Updated ExtendedTools plugin:
     * Improved support for multiple GPUs
 * FIXED:
   * Fixed 100% CPU when starting on some machines

2.25
 * NEW/IMPROVED:
   * Improved CPU frequency calculation
   * Updated ExtendedTools plugin:
     * Added GPU node selection
     * Fixed incorrect GPU usage calculation
 * FIXED:
   * Graph tooltip position with large cursors
   * Fixed .NET process detection
   * Fixed incorrect values in Bits column

2.24
 * NOTE:
   * This release has significant internal code changes. Please
     make sure all plugins are up-to-date.
 * NEW/IMPROVED:
   * Completely new system information window
   * Added option to scroll to new processes
   * Added option to hide driver services
   * Added menu item to copy individual cells
   * Improved module scanning
   * Added Start Task Manager menu item
   * Added Image base to peview
   * Updated ExtendedTools plugin:
     * Added support for new system information window
     * Added Disk, Network and GPU tray icons
     * Added support for custom fonts in the Disk tab
   * Updated Updater plugin:
     * Added download speed
     * Added remaining time
 * FIXED:
   * Fixed retrieval of version information for certain files
   * Fixed driver file names on Windows XP
   * Fixed Run As Administrator when used with complex commands

2.23
 * NEW/IMPROVED:
   * Added display of token capabilities, user/device claims