@@ -241,6 +241,16 @@ VOID PhHandleListViewNotifyForCopy(
     __in HWND ListViewHandle
     );
 
+#define PH_LIST_VIEW_CTRL_C_BEHAVIOR 0x1
+#define PH_LIST_VIEW_CTRL_A_BEHAVIOR 0x2
+#define PH_LIST_VIEW_DEFAULT_1_BEHAVIORS (PH_LIST_VIEW_CTRL_C_BEHAVIOR | PH_LIST_VIEW_CTRL_A_BEHAVIOR)
+
+VOID PhHandleListViewNotifyBehaviors(
+    __in LPARAM lParam,
+    __in HWND ListViewHandle,
+    __in ULONG Behaviors
+    );
+
 PHAPPAPI
 BOOLEAN PhGetListViewContextMenuPoint(
     __in HWND ListViewHandle,
